# lineme

./: AGENTS.md  Cargo.toml  README.md
src/: data.rs  file.rs  main.rs  scrollbar.rs  settings.rs  symbols.rs  timeline.rs  tooltip.rs  ui.rs
src/timeline/: events.rs  header.rs  mini_timeline.rs  threads.rs  ticks.rs
