[package]
name = "lineme"
version = "0.1.0"
edition = "2024"

[dependencies]
analyzeme = "12.0.3"
iced = { version = "0.14", features = ["wgpu", "tokio", "advanced"] }
iced_aw = { version = "0.13", features = ["tabs"] }
measureme = "12.0.3"
rfd = "0.17.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.9"
